Coverity analysis defect 171774: Parse warning

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /data/mci/8df2c396557fb87fa29efdf21060b868/bazel_cache/18545ad5d47fdc81034b726533d3cf62/execroot/_main_/src/mongo/db/pipeline/document_source_score_fusion.cpp:447: PW.PARAMETER_HIDDEN 171774 declaration hides parameter "elem" (declared at line 442)

            Assignee:
            Finley Lau
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: