SERVER-102230 Remove parameter shadowing in DocumentSourceScoreFusion (#36679)

GitOrigin-RevId: 7265342e4fb7e7ccb6ef8fed6492a3f64591cc41